# rkvec

./: CMakeLists.txt  readme.md
include/rkvec/: rkvec.h
src/: main.c
tests/: tests.c
